fix: flex-grow to get the right overflow calculation (refs SFKUI-7446)

--- a/src/style/_topnav.scss
+++ b/src/style/_topnav.scss
@@ -2,6 +2,7 @@
     background-color: var(--docs-topnav-background-color);
     margin: 0 -0.5rem;
     overflow: hidden;
+    flex-grow: 1;
 
     &__list {
         display: flex;
